--- a/hospital_api.ipynb
+++ b/hospital_api.ipynb
@@ -2,31 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: wikipedia in c:\\users\\kledesma\\anaconda3\\envs\\pythondata\\lib\\site-packages (1.4.0)\n",
-      "Requirement already satisfied: beautifulsoup4 in c:\\users\\kledesma\\anaconda3\\envs\\pythondata\\lib\\site-packages (from wikipedia) (4.9.0)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.0.0 in c:\\users\\kledesma\\anaconda3\\envs\\pythondata\\lib\\site-packages (from wikipedia) (2.23.0)\n",
-      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\kledesma\\anaconda3\\envs\\pythondata\\lib\\site-packages (from beautifulsoup4->wikipedia) (2.0.1)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\kledesma\\anaconda3\\envs\\pythondata\\lib\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2020.4.5.1)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in c:\\users\\kledesma\\anaconda3\\envs\\pythondata\\lib\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (3.0.4)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\kledesma\\anaconda3\\envs\\pythondata\\lib\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (1.25.8)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\kledesma\\anaconda3\\envs\\pythondata\\lib\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2.9)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install wikipedia"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -46,7 +21,7 @@
     "import pandas as pd\n",
     "import gmaps\n",
     "import matplotlib.pyplot as plt\n",
-    "g_key = 'AIzaSyA4lTqW5ZvxKAONlqByOBInRSQ2wBdXVF0'\n",
+    "from config import g_key\n",
     "\n",
     "\n"
    ]
