commit bar charts v1

--- a/bar_charts.ipynb
+++ b/bar_charts.ipynb
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -578,15 +578,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -599,9 +590,10 @@
     "plt.xlabel('Cities(GA)')\n",
     "plt.ylabel('No. of Beds')\n",
     "plt.xlim(-0.5,len(hospital_bed['City']))\n",
-    "plt.show()\n",
     "\n",
     "plt.savefig(\"Hospital_Beds_per_City.png\")\n",
+    "\n",
+    "plt.show()\n",
     "\n"
    ]
   },
@@ -751,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -764,15 +756,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -788,9 +771,10 @@
     "plt.xlabel('Cities(GA)')\n",
     "plt.ylabel('No. of Hospitals')\n",
     "plt.xlim(-0.5,len(hospital_count['City']))\n",
-    "plt.show()\n",
     "\n",
-    "plt.savefig(\"Hospitals_per_City.png\")"
+    "\n",
+    "plt.savefig(\"Hospitals_per_City.png\")\n",
+    "plt.show()\n"
    ]
   },
   {
