--- a/bar_charts.ipynb
+++ b/bar_charts.ipynb
@@ -773,7 +773,7 @@
     "plt.xlim(-0.5,len(hospital_count['City']))\n",
     "\n",
     "\n",
-    "plt.savefig(\"Hospitals_per_City.png\")\n",
+    "plt.savefig(\"Hospitals_per_City1.png\")\n",
     "plt.show()\n"
    ]
   },
