adding mapping creation folders to resources folder

--- a/hospital_api.ipynb
+++ b/hospital_api.ipynb
@@ -7360,13 +7360,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Exporting merged data\n",
     "updated_data\n",
-    "updated_data.to_csv(r\"Output/Finalized_Data.csv\")"
+    "updated_data.to_csv(r\"Outputs/Finalized_Data.csv\")"
    ]
   },
   {
