mapping files for census data

--- a/hospital_api.ipynb
+++ b/hospital_api.ipynb
@@ -4073,7 +4073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
@@ -4111,10 +4111,10 @@
        "      <th>State</th>\n",
        "      <th>Hospital Zip Code</th>\n",
        "      <th>Full Address</th>\n",
-       "      <th>Census Zip Code</th>\n",
-       "      <th>Census Latiude</th>\n",
-       "      <th>Census Longitude</th>\n",
-       "      <th>Census County</th>\n",
+       "      <th>City Zip Code</th>\n",
+       "      <th>City Latiude</th>\n",
+       "      <th>City Longitude</th>\n",
+       "      <th>City County</th>\n",
        "      <th>Population</th>\n",
        "      <th>Median Income</th>\n",
        "    </tr>\n",
@@ -4431,31 +4431,31 @@
        "551                          NaN      NaN                NaN   \n",
        "552                          NaN      NaN                NaN   \n",
        "\n",
-       "                                          Full Address  Census Zip Code  \\\n",
-       "0           1035 Red Bud Rd NE, Calhoun, GA 30701, USA          30703.0   \n",
-       "1    707 Old Dalton Ellijay Rd, Chatsworth, GA 3070...          30705.0   \n",
-       "2           915 Gordon Ave, Thomasville, GA 31792, USA          31758.0   \n",
-       "3               903 N Court St, Quitman, GA 31643, USA          31643.0   \n",
-       "4                 1155 5th St SE, Cairo, GA 39828, USA              NaN   \n",
-       "..                                                 ...              ...   \n",
-       "548                                                NaN          30833.0   \n",
-       "549                                                NaN          31096.0   \n",
-       "550                                                NaN          31097.0   \n",
-       "551                                                NaN          30582.0   \n",
-       "552                                                NaN          30295.0   \n",
+       "                                          Full Address  City Zip Code  \\\n",
+       "0           1035 Red Bud Rd NE, Calhoun, GA 30701, USA        30703.0   \n",
+       "1    707 Old Dalton Ellijay Rd, Chatsworth, GA 3070...        30705.0   \n",
+       "2           915 Gordon Ave, Thomasville, GA 31792, USA        31758.0   \n",
+       "3               903 N Court St, Quitman, GA 31643, USA        31643.0   \n",
+       "4                 1155 5th St SE, Cairo, GA 39828, USA            NaN   \n",
+       "..                                                 ...            ...   \n",
+       "548                                                NaN        30833.0   \n",
+       "549                                                NaN        31096.0   \n",
+       "550                                                NaN        31097.0   \n",
+       "551                                                NaN        30582.0   \n",
+       "552                                                NaN        30295.0   \n",
        "\n",
-       "     Census Latiude  Census Longitude       Census County  Population  \\\n",
-       "0         34.479066        -84.762161       Gordon County     40820.0   \n",
-       "1         34.753129        -84.775020  Los Angeles County     33460.0   \n",
-       "2         30.868187        -83.927785       Thomas County     34781.0   \n",
-       "3         30.783639        -83.553430         Wood County      9062.0   \n",
-       "4               NaN               NaN                 NaN         NaN   \n",
-       "..              ...               ...                 ...         ...   \n",
-       "548       33.200325        -82.376250    Jefferson County      3065.0   \n",
-       "549       32.717320        -82.689260  New Hanover County      7046.0   \n",
-       "550       32.912207        -84.148120     Lawrence County      1656.0   \n",
-       "551       34.954638        -83.864840        Towns County      5038.0   \n",
-       "552       33.101705        -84.312520         Wake County      4352.0   \n",
+       "     City Latiude  City Longitude         City County  Population  \\\n",
+       "0       34.479066      -84.762161       Gordon County     40820.0   \n",
+       "1       34.753129      -84.775020  Los Angeles County     33460.0   \n",
+       "2       30.868187      -83.927785       Thomas County     34781.0   \n",
+       "3       30.783639      -83.553430         Wood County      9062.0   \n",
+       "4             NaN             NaN                 NaN         NaN   \n",
+       "..            ...             ...                 ...         ...   \n",
+       "548     33.200325      -82.376250    Jefferson County      3065.0   \n",
+       "549     32.717320      -82.689260  New Hanover County      7046.0   \n",
+       "550     32.912207      -84.148120     Lawrence County      1656.0   \n",
+       "551     34.954638      -83.864840        Towns County      5038.0   \n",
+       "552     33.101705      -84.312520         Wake County      4352.0   \n",
        "\n",
        "     Median Income  \n",
        "0          24110.0  \n",
@@ -4473,7 +4473,7 @@
        "[553 rows x 20 columns]"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 410,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4484,7 +4484,7 @@
     "\n",
     "\n",
     "\n",
-    "city_merge = city_merge.rename(columns={\"County_x\" : \"Hospital County\", \"Latitude_x\" : \"Hospital Latitude\", \"ZIP\" : \"Census Zip Code\", \"Zip Code\" : \"Hospital Zip Code\", \"Latitude_y\" : \"Census Latiude\", \"Longitude\" : \"Census Longitude\", \"County_y\" : \"Census County\"})\n",
+    "city_merge = city_merge.rename(columns={\"County_x\" : \"Hospital County\", \"Latitude_x\" : \"Hospital Latitude\", \"ZIP\" : \"City Zip Code\", \"Zip Code\" : \"Hospital Zip Code\", \"Latitude_y\" : \"City Latiude\", \"Longitude\" : \"City Longitude\", \"County_y\" : \"City County\"})\n",
     "\n",
     "\n",
     "\n",
@@ -5045,18 +5045,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Exporting necessary data to create mapping to update cities\n",
     "unjoined_cities = unjoined['City'].unique()\n",
     "city_map = pd.DataFrame(unjoined_cities)\n",
-    "city_map.to_csv(r\"city_map.csv\")\n",
+    "city_map.to_csv(r\"Resources/city_map.csv\")\n",
     "\n",
     "census_cities = census_data['City'].unique()\n",
     "census_cities = pd.DataFrame(census_cities)\n",
-    "census_cities.to_csv(r\"census_cities.csv\")"
+    "census_cities.to_csv(r\"Resources/census_cities.csv\")"
    ]
   },
   {
@@ -7360,13 +7360,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Exporting merged data\n",
     "updated_data\n",
-    "updated_data.to_csv(r\"Outputs/Finalized_Data.csv\")"
+    "updated_data.to_csv(r\"Outputs/Finalized_Data.csv\", index = False)"
    ]
   },
   {
