city mapping commit

--- a/map_cities.ipynb
+++ b/map_cities.ipynb
@@ -46,48 +46,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Cairo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Donalsonville</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Johns Creek</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Blakely</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Bainbridge</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Colquitt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>9</th>\n",
        "      <td>St. Marys</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Cuthbert</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>11</th>\n",
        "      <td>LaGrange</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>13</th>\n",
        "      <td>Peachtree Corners</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>East Point</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -95,17 +67,10 @@
       ],
       "text/plain": [
        "         city_map_old\n",
-       "0               Cairo\n",
-       "1       Donalsonville\n",
        "2         Johns Creek\n",
-       "3             Blakely\n",
-       "4          Bainbridge\n",
-       "5            Colquitt\n",
-       "6           St. Marys\n",
-       "7            Cuthbert\n",
-       "8            LaGrange\n",
-       "9   Peachtree Corners\n",
-       "10         East Point"
+       "9           St. Marys\n",
+       "11           LaGrange\n",
+       "13  Peachtree Corners"
       ]
      },
      "execution_count": 2,
@@ -115,15 +80,17 @@
    ],
    "source": [
     "#Made edits in excel, pulling back in\n",
-    "city_map= pd.read_csv(\"city_map.csv\")\n",
+    "city_map= pd.read_csv(\"Resources/city_map.csv\")\n",
     "city_map = city_map.drop(columns=['Unnamed: 0'])\n",
     "city_map = city_map.rename(columns={'0':'city_map_old'})\n",
+    "city_map = city_map.loc[(city_map['city_map_old']=='Johns Creek') | (city_map['city_map_old']=='St. Marys')\n",
+    "                        | (city_map['city_map_old']=='LaGrange')| (city_map['city_map_old']=='Peachtree Corners')]\n",
     "city_map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -153,78 +120,78 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Atlanta</td>\n",
+       "      <td>Abbeville</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Saint George</td>\n",
+       "      <td>Acworth</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Shiloh</td>\n",
+       "      <td>Adairsville</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Valdosta</td>\n",
+       "      <td>Adel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Cedar Springs</td>\n",
+       "      <td>Adrian</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>625</th>\n",
-       "      <td>Berlin</td>\n",
+       "      <th>509</th>\n",
+       "      <td>Wrens</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>626</th>\n",
-       "      <td>Franklin Springs</td>\n",
+       "      <th>510</th>\n",
+       "      <td>Wrightsville</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>627</th>\n",
-       "      <td>Helena</td>\n",
+       "      <th>511</th>\n",
+       "      <td>Yatesville</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>628</th>\n",
-       "      <td>Rocky Ford</td>\n",
+       "      <th>512</th>\n",
+       "      <td>Young Harris</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>629</th>\n",
-       "      <td>Hillsboro</td>\n",
+       "      <th>513</th>\n",
+       "      <td>Zebulon</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>630 rows × 1 columns</p>\n",
+       "<p>514 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "    census_cities_old\n",
-       "0             Atlanta\n",
-       "1        Saint George\n",
-       "2              Shiloh\n",
-       "3            Valdosta\n",
-       "4       Cedar Springs\n",
+       "0           Abbeville\n",
+       "1             Acworth\n",
+       "2         Adairsville\n",
+       "3                Adel\n",
+       "4              Adrian\n",
        "..                ...\n",
-       "625            Berlin\n",
-       "626  Franklin Springs\n",
-       "627            Helena\n",
-       "628        Rocky Ford\n",
-       "629         Hillsboro\n",
+       "509             Wrens\n",
+       "510      Wrightsville\n",
+       "511        Yatesville\n",
+       "512      Young Harris\n",
+       "513           Zebulon\n",
        "\n",
-       "[630 rows x 1 columns]"
+       "[514 rows x 1 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Made edits in excel, pulling back in\n",
-    "census_cities= pd.read_csv(\"census_cities.csv\")\n",
+    "census_cities= pd.read_csv(\"Resources/census_cities.csv\")\n",
     "census_cities = census_cities.drop(columns=['Unnamed: 0'])\n",
     "census_cities = census_cities.rename(columns={'0':'census_cities_old'})\n",
     "census_cities"
@@ -262,77 +229,35 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Cairo</td>\n",
-       "      <td>Cairo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Donalsonville</td>\n",
-       "      <td>Donalsonville</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Johns Creek</td>\n",
        "      <td>Alpharetta</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Blakely</td>\n",
-       "      <td>Blakely</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Bainbridge</td>\n",
-       "      <td>Bainbridge</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Colquitt</td>\n",
-       "      <td>Colquitt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>9</th>\n",
        "      <td>St. Marys</td>\n",
        "      <td>Saint Marys</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Cuthbert</td>\n",
-       "      <td>Cuthbert</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>11</th>\n",
        "      <td>LaGrange</td>\n",
        "      <td>Lagrange</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>13</th>\n",
        "      <td>Peachtree Corners</td>\n",
        "      <td>Roswell</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>East Point</td>\n",
-       "      <td>East Point</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         city_map_old   city_map_new\n",
-       "0               Cairo          Cairo\n",
-       "1       Donalsonville  Donalsonville\n",
-       "2         Johns Creek     Alpharetta\n",
-       "3             Blakely        Blakely\n",
-       "4          Bainbridge     Bainbridge\n",
-       "5            Colquitt       Colquitt\n",
-       "6           St. Marys    Saint Marys\n",
-       "7            Cuthbert       Cuthbert\n",
-       "8            LaGrange       Lagrange\n",
-       "9   Peachtree Corners        Roswell\n",
-       "10         East Point     East Point"
+       "         city_map_old city_map_new\n",
+       "2         Johns Creek   Alpharetta\n",
+       "9           St. Marys  Saint Marys\n",
+       "11           LaGrange     Lagrange\n",
+       "13  Peachtree Corners      Roswell"
       ]
      },
      "execution_count": 4,
@@ -341,82 +266,24 @@
     }
    ],
    "source": [
+    "# Assigning closeby cities\n",
     "city_map['city_map_new'] = ''\n",
-    "city_map.loc[0,'city_map_new'] = 'Cairo'\n",
-    "city_map.loc[1,'city_map_new'] = 'Donalsonville'\n",
     "city_map.loc[2,'city_map_new'] = 'Alpharetta'\n",
-    "city_map.loc[3,'city_map_new'] = 'Blakely'\n",
-    "city_map.loc[4,'city_map_new'] = 'Bainbridge'\n",
-    "city_map.loc[5,'city_map_new'] = 'Colquitt'\n",
-    "city_map.loc[6,'city_map_new'] = 'Saint Marys'\n",
-    "city_map.loc[7,'city_map_new'] = 'Cuthbert'\n",
-    "city_map.loc[8,'city_map_new'] = 'Lagrange'\n",
-    "city_map.loc[9,'city_map_new'] = 'Roswell'\n",
-    "city_map.loc[10,'city_map_new'] = 'East Point'\n",
+    "city_map.loc[9,'city_map_new'] = 'Saint Marys'\n",
+    "city_map.loc[11,'city_map_new'] = 'Lagrange'\n",
+    "city_map.loc[13,'city_map_new'] = 'Roswell'\n",
     "\n",
     "city_map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>census_cities_old</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>366</th>\n",
-       "      <td>Donalsonville</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    census_cities_old\n",
-       "366     Donalsonville"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# census_cities = census_cities.loc[(census_cities['census_cities_old'] == 'Donalsonville')]\n",
-    "# census_cities"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_map = city_map.to_csv(\"citi_map_v2.csv\")"
+    "# Drop file for consumption by another notebook\n",
+    "city_map = city_map.to_csv(\"Outputs/citi_map_v2.csv\")"
    ]
   },
   {
@@ -443,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
